# Ciri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh  todo.txt
dependencies/glad/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt  stb_image_impl.c
resources/font/: LICENSE.txt
resources/shader/: albedo.frag  albedo_texture.frag  base.vert  base_color.frag  diffuse.frag  dist_origin.frag  emissive.frag  emissive_texture.frag  flat_normal.frag  gbuffer.frag  gbuffer.vert  gbuffer_anim.vert  linear_depth.frag  metallic_roughness.frag  metallic_texture.frag  multiple_texture.frag  normal.frag  normal_texture.frag  occlusion.frag  occlusion_texture.frag  phong.frag  roughness_texture.frag  screen_quad.vert  single_texture.frag  test.frag  test.vert  texture.frag  world_position.frag
src/: Application.cpp  Application.h  Entry.cpp  Entry.h  PCH.h  Shader.cpp  Shader.h  ~Entry.cpp
src/Anim/: Animation.cpp  Animation.h  Bone.cpp  Bone.h
src/Math/: Math.cpp  Math.h
src/Mesh/: Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h
src/Render/: Material.cpp  Material.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/Scene/: Camera.cpp  Camera.h  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/UI/: EntitySettingsPanel.cpp  EntitySettingsPanel.h  Gizmo.cpp  Gizmo.h  MaterialLibraryPanel.cpp  MaterialLibraryPanel.h  MaterialSettingsPanel.cpp  MaterialSettingsPanel.h  MeshSettingsPanel.cpp  MeshSettingsPanel.h  RendererSettingsPanel.cpp  RendererSettingsPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  StatisticsPanel.cpp  StatisticsPanel.h  UI.cpp  UI.h  Viewport.cpp  Viewport.h
src/Util/: Assert.h  Log.cpp  Log.h  Math.cpp  Math.h  Mem.h  Util.cpp  Util.h
src/Window/: Event.h  UI.cpp  (+5 more)
(+21 files in other folders)
